saving progress formatting metadata
almost there

--- a/src/pages/articles/2023-recap.mdx
+++ b/src/pages/articles/2023-recap.mdx
@@ -1,14 +1,12 @@
+import Head from 'next/head'
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: '2023 Recap',
-  description: '2023 Recap',
-  openGraph: {
-    title: '2023 Recap',
-    description: '2023 Recap',
-    images: [{ url: 'https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704266542/media/2023-recap-og-image.png' }]
-  }
-}
+<ArticleMetaTags 
+  title="2023 Recap" 
+  description="My 2023 was defined by two things: a move to LA and going all in on projects"
+  slug="2023-recap"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704266542/media/2023-recap-og-image.png"
+/>
 
 My 2023 was defined by two things: **a move to LA and going all in on projects.**
 
