--- a/src/pages/articles/shifting-directions.mdx
+++ b/src/pages/articles/shifting-directions.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Shifting Directions",
-  description: "Shifting Directions",
-  openGraph: {
-    title: "Shifting Directions",
-    description: "Shifting Directions",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Shifting Directions" 
+  description="Shifting Directions"
+  slug="shifting-direcitons"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142860/media/ShiftingDirections.png"
+/>
 
 Hey everyone! I know this is a break from the regularly scheduled weekly posts, but I want to explain why, what I've been up to, and what's next for Next in Tech.
 
