few more og tags will do rest later

--- a/src/pages/articles/next-in-tech-mar-20-2023.mdx
+++ b/src/pages/articles/next-in-tech-mar-20-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Mar. 20, 2023",
-  description: "Next in Tech - Mar. 20, 2023",
-  openGraph: {
-    title: "Next in Tech - Mar. 20, 2023",
-    description: "Next in Tech - Mar. 20, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Mar. 20, 2023" 
+  description="Next in Tech - Mar. 20, 2023"
+  slug="next-in-tech-mar-20-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142856/media/NextInTechMar202023.png"
+/>
 
 GM and Happy Monday! Let’s dive right into last week’s hottest stories:
 
