--- a/src/pages/articles/next-in-tech-mar-25-2023.mdx
+++ b/src/pages/articles/next-in-tech-mar-25-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Mar. 25, 2023",
-  description: "Next in Tech - Mar. 25, 2023",
-  openGraph: {
-    title: "Next in Tech - Mar. 25, 2023",
-    description: "Next in Tech - Mar. 25, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Mar. 25, 2023" 
+  description="Next in Tech - Mar. 25, 2023"
+  slug="next-in-tech-mar-25-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142857/media/NextInTechMar252023.png"
+/>
 
 From the SEC warning to Coinbase and the arrest of Do Kwon, to the TikTok CEO's congressional hearing and OpenAI's ChatGPT plugin store, here's what's Next in Tech:
 
