--- a/src/pages/articles/product-launch-nfts.mdx
+++ b/src/pages/articles/product-launch-nfts.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Product Launch NFTs",
-  description: "Product Launch NFTs",
-  openGraph: {
-    title: "Product Launch NFTs",
-    description: "Product Launch NFTs",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Product Launch NFTs" 
+  description="Product Launch NFTs"
+  slug="product-launch-nfts"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142862/media/ProductLaunchNFTs.png"
+/>
 
 _From Passive Collectors to Passionate Users_
 
