--- a/src/pages/articles/the-wallet-of-tomorrow.mdx
+++ b/src/pages/articles/the-wallet-of-tomorrow.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "The Wallet of Tomorrow",
-  description: "The Wallet of Tomorrow",
-  openGraph: {
-    title: "The Wallet of Tomorrow",
-    description: "The Wallet of Tomorrow",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="The Wallet of Tomorrow" 
+  description="The Wallet of Tomorrow"
+  slug="the-wallet-of-tomorrow"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142858/media/TheWalletOfTomorrow.png"
+/>
 
 Wallets and accounts are key primitives in web3. 
 
