--- a/src/pages/articles/tools-for-action.mdx
+++ b/src/pages/articles/tools-for-action.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Tools for action",
-  description: "Tools for action",
-  openGraph: {
-    title: "Tools for action",
-    description: "Tools for action",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Tools for action" 
+  description="Tools for action"
+  slug="tools-for-action"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142858/media/TheWalletOfTomorrow.png"
+/>
 
 ###### What if users were given a tool to organize their thoughts and actions with the same amount of detail as a tool for thought that lets them organize their notes?
 
