--- a/src/pages/articles/user-ai-gency.mdx
+++ b/src/pages/articles/user-ai-gency.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "User AI-gency",
-  description: "User AI-gency",
-  openGraph: {
-    title: "User AI-gency",
-    description: "User AI-gency",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="User AI-gency" 
+  description="User AI-gency"
+  slug="user-ai-gency"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142860/media/UserAIgency.png"
+/>
 
 How chatbots change the user agent in computing*
 
