more formatting almost done

--- a/src/pages/articles/2022-recap.mdx
+++ b/src/pages/articles/2022-recap.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "2022 Recap",
-  description: "2022 Recap",
-  openGraph: {
-    title: "2022 Recap",
-    description: "2022 Recap",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="2022 Recap" 
+  description="2022 Recap"
+  slug="2022-recap"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142851/media/2022Recap.png"
+/>
 
 2022 was a year of personal growth and self-discovery for me. I took a gap semester from school, which was a risk that ended up being an amazing experience. I also had the chance to think about my beliefs and assumptions in a deeper way, and while I don't have all the answers yet, I feel like I know myself better and am more confident in my path. It was a year of pushing myself out of my comfort zone and it has paid off in terms of personal growth.
 
