--- a/src/pages/articles/2023-recap.mdx
+++ b/src/pages/articles/2023-recap.mdx
@@ -14,7 +14,11 @@ On the heels of a gap semester where I built a spatial browsing app, I started t
 
 It was in a field I needed to brush up in a bit and I wanted to make sure I did really well on this project, so I went to work for a few weeks straight, shuffling between VSCode, docs, and ChatGPT(one of my first real chances to see how it could help with a project). At the same time I also started to focus more on writing, publishing 18 articles with 68 subscribers on Substack(and cross-posted on my site and Paragraph). I started a weekly series called "Next In Tech", where at the end of every week I'd round up some of the top stories that caught my eye, as well as a few updates on what I was working on. Writing "Next In Tech" helped me not only share my thoughts on topics/what's trending, but it also gave me a consistent posting schedule to follow. 
 
+<CldImage src="media/NextInTechJan282023.png" alt="The first Next in Tech from Jan 28, 2023" width="500" height="500" className="p-2 pt-0 rounded-2xl" />
+
 I also joined Chapter One's Research Program for the spring semester, an amazing cohort that pushed me to write even more. I put out three pieces over the course of twelve weeks and learned a ton from what everyone else wrote as well. And around this time, I published a revamped version of my website dylansteck.com as a digital garden -- indexing my articles, casts, and tweets(note: those features are down right now but coming back even better soon). I was also on the team FundPG at ETHDenver 2023 with Luciano DeAngelo and Joseph Low, where we built a product that let you donate earnings from multiple routers to the Gitcoin matching pool. -- group purple here too
+
+<CldImage src="media/casterscan-v1-website.jpg" alt="Casterscan v1 with Yash Karthik" width="550" height="550" className="p-2 pt-0 rounded-2xl" />
 
 I then spent a good bit of time building v1 of Casterscan with Yash Karthik -- a block explorer for Farcaster inspired by a mockup I did of Etherscan but for Farcaster. Since hubs were released(dbl check) in 2023 and devs now had more tools to sync the whole network to a database, I felt it would be important to track data the way a block explorer does. I was also spending a lot more time on Farcaster, as I have this year, and thought this could be a cool project. 
 
@@ -30,7 +34,7 @@ And probably the largest event of the fall for me was OpenAI DevDay, which funny
 
 <h1 className="text-lg font-medium">Forecast</h1>
 
-Here are some trends that I see for 2024. 
+Here are some trends that I see for 2024:
 
 **Everything in crypto will be embedded and gamified.**
 	This year we saw trends to abstract web3 rails and clean up UX so crypto could be more helpful, and usable by more people(eg. embedded wallets, points, L2s managed by Conduit, etc). This is only going to accelerate more and become the industry standard in 2024, and that will push developers to make more engaging apps. I hope this allows for crypto to expand beyond its (currently) limited use cases.
