--- a/src/pages/articles/building-a-digital-garden.mdx
+++ b/src/pages/articles/building-a-digital-garden.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Building a Digital Garden",
-  description: "Building a Digital Garden",
-  openGraph: {
-    title: "Building a Digital Garden",
-    description: "Building a Digital Garden",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Building a Digital Garden" 
+  description="Building a Digital Garden"
+  slug="building-a-digital-garden"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142851/media/BuildingADigitalGarden.png"
+/>
 
 <CldImage src="media/dsfinalsite.png" alt="final site image" width="700" height="700" className="p-2 pt-0" />
 
