--- a/src/pages/articles/focus-on-what-doesnt-scale.mdx
+++ b/src/pages/articles/focus-on-what-doesnt-scale.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Focus On What Doesn't Scale",
-  description: "Focus On What Doesn't Scale",
-  openGraph: {
-    title: "Focus On What Doesn't Scale",
-    description: "Focus On What Doesn't Scale",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Focus On What Doesn't Scale" 
+  description="Focus On What Doesn't Scale"
+  slug="focus-on-what-doesnt-scale"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142853/media/FocusOnWhatDoesntScale.png"
+/>
 
 *This is an opinion piece for the [SayMore + FarCon Essay Contest](https://saymore.tv/contest) on what I believe the future of the Farcaster protocol should be.* 
 
