--- a/src/pages/articles/going-down-the-rabbit-hole.mdx
+++ b/src/pages/articles/going-down-the-rabbit-hole.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Going Down the Rabbit Hole",
-  description: "Going Down the Rabbit Hole",
-  openGraph: {
-    title: "Going Down the Rabbit Hole",
-    description: "Going Down the Rabbit Hole",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Going Down the Rabbit Hole" 
+  description="Going Down the Rabbit Hole"
+  slug="going-down-the-rabbit-hole"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142863/media/RabbitHoleBanner.jpg"
+/>
 
 _Building a new way to browse using your history_
 
