--- a/src/pages/articles/how-i-ended-up-spending-all-summer-building-a-chrome-extension.mdx
+++ b/src/pages/articles/how-i-ended-up-spending-all-summer-building-a-chrome-extension.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "How I ended up spending all summer building a Chrome extension",
-  description: "How I ended up spending all summer building a Chrome extension",
-  openGraph: {
-    title: "How I ended up spending all summer building a Chrome extension",
-    description: "How I ended up spending all summer building a Chrome extension",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="How I ended up spending all summer building a Chrome extension" 
+  description="How I ended up spending all summer building a Chrome extension"
+  slug="how-i-ended-up-spending-all-summer-building-a-chrome-extension"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142851/media/ActionsChromeExtBanner.jpg"
+/>
 
 This summer, I set off to build a productivity-based browser and ended up building a Chrome extension. Here’s how the process yielded a product that, while smaller than I initially wanted it to be, set me on the best path possible for future success:
 
