--- a/src/pages/articles/internet-os.mdx
+++ b/src/pages/articles/internet-os.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Internet OS",
-  description: "Internet OS",
-  openGraph: {
-    title: "Internet OS",
-    description: "Internet OS",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Internet OS" 
+  description="Internet OS"
+  slug="internet-os"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142853/media/InternetOS.png"
+/>
 
 *How the Internet will become a part of the operating system and what that looks like.*
 
