--- a/src/pages/articles/lego-blocks-for-the-web.mdx
+++ b/src/pages/articles/lego-blocks-for-the-web.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "LEGO Blocks for the Web",
-  description: "LEGO Blocks for the Web",
-  openGraph: {
-    title: "LEGO Blocks for the Web",
-    description: "LEGO Blocks for the Web",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="LEGO Blocks for the Web" 
+  description="LEGO Blocks for the Web"
+  slug="lego-blocks-for-the-web"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142862/media/LEGOBlocksBanner.png"
+/>
 
 The structure of the Internet is like the Wild West — each app has its own set of standards that users need to familiarize themselves with. The rules and data in these apps hardly overlap with other apps, and so users are left with a fragmented Internet life, while app developers are stuck trying to make their own mega-systems to fend off competitors.
 
