--- a/src/pages/articles/my-summer-at-chapter-one.mdx
+++ b/src/pages/articles/my-summer-at-chapter-one.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "My Summer at Chapter One",
-  description: "My Summer at Chapter One",
-  openGraph: {
-    title: "My Summer at Chapter One",
-    description: "My Summer at Chapter One",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="My Summer at Chapter One" 
+  description="My Summer at Chapter One"
+  slug="my-summer-at-chapter-one"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142860/media/ChapterOneSummerBanner.png"
+/>
 
 **I cannot believe my time at Chapter One came to a close. I want to take a moment to reflect on this experience, the amazing teammates I interacted with, and my takeaways.**
 
