--- a/src/pages/articles/next-in-tech-apr-1-2023.mdx
+++ b/src/pages/articles/next-in-tech-apr-1-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Apr. 1, 2023",
-  description: "Next in Tech - Apr. 1, 2023",
-  openGraph: {
-    title: "Next in Tech - Apr. 1, 2023",
-    description: "Next in Tech - Apr. 1, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Apr. 1, 2023" 
+  description="Next in Tech - Apr. 1, 2023"
+  slug="next-in-tech-apr-1-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142854/media/NextInTechApr12023.png"
+/>
 
 In this week's Next in Tech, Arc has released a mobile companion, Farcaster has 10 hubs running on its testnet, Twitter open-sourced its algorithm, and Elon Musk and other prominent figures have signed an open letter calling for a pause in the training of AI systems more powerful than GPT-4.
 
