--- a/src/pages/articles/next-in-tech-apr-8-2023.mdx
+++ b/src/pages/articles/next-in-tech-apr-8-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Apr. 8, 2023",
-  description: "Next in Tech - Apr. 8, 2023",
-  openGraph: {
-    title: "Next in Tech - Apr. 8, 2023",
-    description: "Next in Tech - Apr. 8, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Apr. 8, 2023" 
+  description="Next in Tech - Apr. 8, 2023"
+  slug="next-in-tech-apr-8-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142854/media/NextInTechApr82023.png"
+/>
 
 _Check out the piece and_ [_accompanying free launch NFT_](https://www.launchcaster.xyz/x/farcaster/642c8e0f72311cfd1f49a920) _I shipped earlier this week about_ [_product launch NFTs_](https://dylsteck.substack.com/p/product-launch-nfts)_!_
 
