--- a/src/pages/articles/next-in-tech-feb-11-2023.mdx
+++ b/src/pages/articles/next-in-tech-feb-11-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Feb. 11, 2023",
-  description: "Next in Tech - Feb. 11, 2023",
-  openGraph: {
-    title: "Next in Tech - Feb. 11, 2023",
-    description: "Next in Tech - Feb. 11, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Feb. 11, 2023" 
+  description="Next in Tech - Feb. 11, 2023"
+  slug="next-in-tech-feb-11-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142856/media/NextInTechFeb112023.png"
+/>
 
 Welcome back to Next in Tech, I hope everyone had a great week!
 
