--- a/src/pages/articles/next-in-tech-feb-18-2023.mdx
+++ b/src/pages/articles/next-in-tech-feb-18-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Feb. 18, 2023",
-  description: "Next in Tech - Feb. 18, 2023",
-  openGraph: {
-    title: "Next in Tech - Feb. 18, 2023",
-    description: "Next in Tech - Feb. 18, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Feb. 18, 2023" 
+  description="Next in Tech - Feb. 18, 2023"
+  slug="next-in-tech-feb-18-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechFeb182023.png"
+/>
 
 Want to read my latest research article on the boom of Farcaster's developer ecosystem & how it mirrors early Twitter apps? **[Check it out here!](https://dylsteck.substack.com/p/the-boom-of-farcasters-developer-community)**
 
