--- a/src/pages/articles/next-in-tech-feb-4-2023.mdx
+++ b/src/pages/articles/next-in-tech-feb-4-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Feb. 4, 2023",
-  description: "Next in Tech - Feb. 4, 2023",
-  openGraph: {
-    title: "Next in Tech - Feb. 4, 2023",
-    description: "Next in Tech - Feb. 4, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Feb. 4, 2023" 
+  description="Next in Tech - Feb. 4, 2023"
+  slug="next-in-tech-feb-4-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142854/media/NextInTechFeb42023.png"
+/>
 
 Happy Saturday and welcome back to Next in Tech! This week I’m covering Twitter’s new API access rules, OpenAI advancements, and even a new app from the Instagram co-founders. Let’s dive in:
 
