--- a/src/pages/articles/next-in-tech-jan-28-2023.mdx
+++ b/src/pages/articles/next-in-tech-jan-28-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Jan. 28, 2023",
-  description: "Next in Tech - Jan. 28, 2023",
-  openGraph: {
-    title: "Next in Tech - Jan. 28, 2023",
-    description: "Next in Tech - Jan. 28, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Jan. 28, 2023" 
+  description="Next in Tech - Jan. 28, 2023"
+  slug="next-in-tech-jan-28-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142855/media/NextInTechJan282023.png"
+/>
 
 Welcome back to Next in Tech! It’s been a busy first few weeks of 2023 — I wanted to share what I’ve been up to and what’s been on my mind.
 
