--- a/src/pages/articles/next-in-tech-mar-4-2023.mdx
+++ b/src/pages/articles/next-in-tech-mar-4-2023.mdx
@@ -1,14 +1,11 @@
 import MdxLayout from '../../components/MdxLayout'
 
-export const metadata = {
-  title: "Next in Tech - Mar. 4, 2023",
-  description: "Next in Tech - Mar. 4, 2023",
-  openGraph: {
-    title: "Next in Tech - Mar. 4, 2023",
-    description: "Next in Tech - Mar. 4, 2023",
-    images: [{ url: '' }]
-  }
-}
+<ArticleMetaTags 
+  title="Next in Tech - Mar. 4, 2023" 
+  description="Next in Tech - Mar. 4, 2023"
+  slug="next-in-tech-mar-4-2023"
+  image="https://res.cloudinary.com/dz3c2rl2o/image/upload/v1704142856/media/NextInTechMar42023.png"
+/>
 
 Happy Saturday and welcome back to Next in Tech! Hope everyone had a great week. We're back with many new developments after a short hiatus last week:
 
