update article wording

--- a/src/pages/articles/2023-recap.mdx
+++ b/src/pages/articles/2023-recap.mdx
@@ -24,7 +24,7 @@ I also joined [Chapter One's Research Program](https://twitter.com/chapterone/st
 
 After the research program, Fund PG, and Group Purple, I spent quite a bit of time building v1 of [Casterscan](https://casterscan.com) with [Yash Karthik](https://warpcast.com/yashkarthik) -- a block explorer for Farcaster inspired by a mockup I did of Etherscan but for Farcaster. Since so much had happened with hubs and devs now had more tools to sync the whole network to a database, I felt it would be important to track data the way a block explorer does. I was also spending a lot more time on Farcaster, as I have this year, and thought this could be a cool project. 
 
-I then started a big journey out west to move to LA. The move has two reasons: the first is to transfer to Santa Monica College, and the other is to be closer to the tech ecosystem(having an internship here was a motivating factor too!). I had an incredible time working with them and learned more from the experience than I have any other position. I started off the summer working on features for a mobile crypto browser but pivoted to work on the backend for [Glimpse](https://glimpse.surf), an AI-powered assistant that can chat with the Internet. I felt like there was a lot of shared vision for a new Internet and I really enjoyed learning from and working with the team. They gave me the space and skills to be able to work -- and I'm forever grateful for the opportunity. I also spent time this summer as a Platform Fellow at [Double Down](https://double-down.com), a VC firm focused on the mainstream adoption of crypto. It was super valuable for me to learn from Mags and Amac's deep consumer backgrounds, as well as from the other fellows.
+I then started a big journey out west to move to LA. The move has two reasons: the first is to transfer to Santa Monica College, and the other is to be closer to the tech ecosystem. A big reason was also that I had an internship in-person this summer with Triangle Labs. I had an incredible time working with them and learned more from the experience than I have any other position. I started off the summer working on features for a mobile crypto browser but pivoted to work on the backend for [Glimpse](https://glimpse.surf), an AI-powered assistant that can chat with the Internet. I felt like there was a lot of shared vision for a new Internet and I really enjoyed learning from and working with the team. They gave me the space and skills to be able to work -- and I'm forever grateful for the opportunity. I also spent time this summer as a Platform Fellow at [Double Down](https://double-down.com), a VC firm focused on the mainstream adoption of crypto. It was super valuable for me to learn from Mags and Amac's deep consumer backgrounds, as well as from the other fellows.
 
 Going into the fall, I knew that I wanted to take everything I'd learned from the year and apply it to two areas: Cortex and Farcaster. Cortex is my years long research into what the future workspace looks like, and though it's something I gave up for a bit going into the year, by the fall I found myself newly inspired to do new research. And for Farcaster, there were a few things I wanted to build that I felt could either connect with Cortex or was related in spirit and just made more sense as a Farcaster community utility. 
 
